proper visualisation of every question on the main-page was added