@@ -1,8 +1,11 @@
 package org.example.forum.controllers;
 
 import lombok.AllArgsConstructor;
+import org.example.forum.DTO.QuestionDTO;
 import org.example.forum.Entities.Question;
+import org.example.forum.Entities.User;
 import org.example.forum.repositories.QuestionRepository;
+import org.example.forum.repositories.UserRepository;
 import org.example.forum.services.QuestionService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -11,6 +14,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/main-page")
@@ -18,29 +22,29 @@ public class MainController {
 
     private final QuestionRepository questionRepository;
     private final QuestionService questionService;
+    private final UserRepository userRepository;
     @Autowired
-    public MainController(QuestionRepository questionRepository) {
+    public MainController(QuestionRepository questionRepository, QuestionService questionService, UserRepository userRepository) {
         this.questionRepository = questionRepository;
-        questionService = new QuestionService(questionRepository);
+        this.questionService = questionService;
+        this.userRepository = userRepository;
     }
 
     @GetMapping
     public String mainPage(Model model) {
         List<Question> questionList = questionService.getQuestionsInRange(0, 5);
 
-        List<QuestionDTO> questionDTOs = questionList.stream() // 1
-                .map(question -> { // 2
-                    // Находим пользователя по userId
-                    User user = userRepository.findById(question.getUserId()).orElseThrow(); // 3
+        List<QuestionDTO> questionDTOs = questionList.stream()
+                .map(question -> {
 
-                    // Разделяем теги через запятую
-                    List<String> tags = List.of(question.getTags().split(",")); // 4
+                    User user = userRepository.findById(question.getUserId()).orElseThrow();
 
-                    // Создаём DTO для передачи в шаблон
-                    return new QuestionDTO(question, user, tags); // 5
+                    List<String> tags = List.of(question.getTags().split(","));
+
+                    return new QuestionDTO(question, tags, user);
                 })
-                .collect(Collectors.toList()); // 6
-        model.addAttribute("questionList", questionList);
+                .toList();
+        model.addAttribute("questionList", questionDTOs);
         return "main-page";
     }
 
